Actions
Bug #11447
closedxargs: NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with NULL pointers:
xargs.c: In function 'parseargs': xargs.c:1103:43: error: comparison between pointer and integer [-Werror] else if ((av[i][0] == '-') && (av[i][1] != NULL)) { ^~ xargs.c:1122:18: error: comparison between pointer and integer [-Werror] if (av[i][2] == NULL) { ^~ xargs.c:1126:18: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] mav[mac][2] = NULL; ^ xargs.c:1160:18: error: comparison between pointer and integer [-Werror] if (av[i][2] != NULL) { ^~ xargs.c:1162:18: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] mav[mac][2] = NULL; ^
Updated by Electric Monk almost 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 1dfc79c00accaeca37225189e270abb0fab8619e
commit 1dfc79c00accaeca37225189e270abb0fab8619e Author: Toomas Soome <tsoome@me.com> Date: 2019-07-31T06:31:00.000Z 11447 xargs: NULL pointer errors Reviewed by: Andy Fiddaman <andy@omniosce.org> Approved by: Dan McDonald <danmcd@joyent.com>
Actions